--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ TILESET_OPTIMIZATION=false
 # Tileset optimization quality (0.0 - 1.0)
 TILESET_OPTIMIZATION_QUALITY_MIN=0.9
 TILESET_OPTIMIZATION_QUALITY_MAX=1.0
+
+WA_HOST=https://play.workadventu.re
+
+GHTOOLS_API_HOST=https://api.github.com
+GHTOOLS_USER=<your-github-username>
+GHTOOLS_PASSWORD=<your-github-access-token>
