--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "api": "npx nodemon dist/server.js",
     "start": "vite",
     "build": "tsc && vite build",
     "prod": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.19.31",
     "@workadventure/iframe-api-typings": "^1.18.11",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^4.5.2",
     "wa-map-optimizer-vite": "^1.1.28"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@workadventure/scripting-api-extra": "^1.8.1",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   }
 }
